--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -6,44 +6,15 @@
 body{
     font-family: "Cormorant SC", serif;
     font-style: normal;
-}
-.contact{
-    background: #FF3147 0% 0% no-repeat padding-box;
-    border-radius: 2px;
-    border-color: transparent;
-    opacity: 1;
-    color: white;
-    font: normal normal 600 14px/26px Poppins;
-    letter-spacing: 1.4px;
-    text-transform: uppercase;
-    width: 160px;
-    height: 50px;
-}
-.firstGrid{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    border: 2px solid red ;
-    grid-column-gap: 68px;
-    /* margin-top: 100px; */
-}
-.grid-right-img{
-  width: 487px;
-  margin-top: 100px;
-  /* height: 737px; */
-  /* position: absolute;
-  top: 100px;
-  left: 1058px; */
-}
-img{
-  display: inline-block;
-  width: 100%;
-  height: auto;
 
 }
-.grid-left-text{
-  grid-column-start: 2;
+.left-text, .right-img, img{
+  display: inline-block;
 }
-.award{
+.l1{
+  position: absolute;
+  top: 243px;
+  left: 376px;
   width: 251px;
   height: 30px;
   /* UI Properties */
@@ -53,35 +24,171 @@ img{
   color: #FF3147;
   text-transform: uppercase;
   opacity: 1;
-  margin-bottom: 39px;
-  margin-top: 243px;
 }
-.digital-agency{
-  /* Layout Properties */
-width: 614px;
-height: 140px;
-/* UI Properties */
-text-align: left;
-font: normal normal bold 60px/80px Cormorant SC;
-letter-spacing: 0px;
-color: #000000;
-text-transform: uppercase;
-opacity: 1;
+.l2{
+  position: absolute;
+  top: 312px;
+  left: 376px;
+  width: 614px;
+  height: 140px;
+  text-align: left;
+  font: normal normal bold 60px/80px Cormorant SC;
+  letter-spacing: 0px;
+  color: #000000;
+  text-transform: uppercase;
+  opacity: 
 }
-.short{
-  /* Layout Properties */
-width: 584px;
-height: 83px;
-/* UI Properties */
-/* text-align: left; */
-font: normal normal normal 16px/30px Poppins;
-letter-spacing: 0px;
-color: #000000;
-opacity: 1;
-margin-top: 50px;
+.l3{
+  position: absolute;
+  top: 502px;
+  left: 375px;
+  width: 584px;
+  height: 83px;
+  text-align: left;
+  font: normal normal normal 16px/30px Poppins;
+  letter-spacing: 0px;
+  color: #000000;
+  opacity: 1;
+}
+.right-img{
+  position: absolute;
+  top: 100px;
+  left: 1058px;
+  width: 487px;
+  height: 737px;
+  /* UI Properties */
+  /* background: transparent url() 0% 0% no-repeat padding-box; */
+  opacity: 1;
+}
+img{
+  width: 100%;
 }
 #contactUs{
-  margin-top: 60px;
+  position: absolute;
+  top: 645px;
+  left: 376px;
+  width: 160px;
+  height: 50px;
+  background: #FF3147 0% 0% no-repeat padding-box;
+  border-radius: 2px ;
+  border-color: #FF3147;
+  opacity: 1;
+  font: normal normal 600 14px/26px Poppins;
+  letter-spacing: 1.4px;
+  color: #FFFFFF;
+}
+.l4{
+  position: absolute;
+  top: 1037px;
+  left: 373px;
+  width: 156px;
+  height: 24px;
+  /* UI Properties */
+  text-align: left;
+  font: normal normal 600 24px/26px Cormorant SC;
+  letter-spacing: 0px;
+  color: #FF3147;
+  opacity: 1;
+}
+.l5{
+  position: absolute;
+  top: 1101px;
+  left: 373px;
+  width: 442px;
+  height: 110px;
+  text-align: left;
+  font: normal normal bold 45px/65px Cormorant SC;
+  letter-spacing: 0px;
+  color: #000000;
+  text-transform: uppercase;
+  opacity: 1;
+}
+.l6{
+  position: absolute;
+  top: 1114px;
+  left: 960px;
+  width: 584px;
+  height: 83px;
+  text-align: left;
+  font: normal normal normal 16px/30px Poppins;
+  letter-spacing: 0px;
+  color: #000000;
+  opacity: 1
+}
+
+.slider-container {
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 526px;
+  position: absolute;
+  left: 373px;
+  top: 1271px;
+}
+
+.slider {
+  display: flex;
+  transition: transform 0.5s ease;
+
+}
+
+.slider img {
+  width: 370px;
+  height: 526px;
+}
+.redDiv{
+  width: 370px;
+  height: 526px;
+  /* UI Properties */
+  background: #FF3147 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  opacity: 0.86;
+}
+.read{
+  width: 185px;
+  height: 50px;
+  /* UI Properties */
+  background: #F4F4F4 0% 0% no-repeat padding-box;
+  border-radius: 2px;
+  opacity: 1;
+
+  position:relative;
+  text-align: left;
+  vertical-align: middle;
+  font: normal normal 600 14px/26px Poppins;  letter-spacing: 1.4px;
+  color: #FF3147;
+  opacity: 1;
+  /* background-image:  url('assets/images/Arrow/arrow@2x.png'); */
+  background-image: url(/docs/assets/images/Arrow/arrow@2x.png);
+  background-position: 127px center;
+  background-size: 37px 10px;
+  padding-left: 21px;
+}
+.arrow{
+  position: relative;
+  width: 100%; 
+  height: 10px;
+  display: inline-block;
+}
+.console-img{
+  display: inline-block;
+  position: relative;
+  /* top: 1387px;
+  left: 1331px; */
+  width: 57px;
+  height: 57px;
+}
+.radio-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.radio-buttons img {
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  fill: #333;
 }
 /* .cormorant-sc-light {
     font-family: "Cormorant SC", serif;
