--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -4,8 +4,7 @@
   box-sizing: border-box;
 }
 body{
-    /* transform: scale(0.8);    */
-    transform: scale(0.75); /* Scale the body to 80% */
+    transform: scale(0.05); /* Scale the body to x% */
     transform-origin: top left; /* Set the origin to the top-left corner */
 }
 .left-text, .right-img, img{
@@ -259,7 +258,7 @@ https://jsfiddle.net/t5dwp7pg/1/
   background: #FF3147 0% 0% no-repeat padding-box;
   border-radius: 5px;
   opacity: 0.86;
-  background-image: url('/docs/assets/images/iconConsole/icon@2x.png');
+  background-image: url(../images/iconConsole/icon@2x.png);
   background-size: 57px 57px;
   background-position: 156px 116px;
   margin-right: 30px;
@@ -282,7 +281,8 @@ https://jsfiddle.net/t5dwp7pg/1/
   border-color: #FF3147;
   opacity: 1;
   /* background-image:  url('assets/images/Arrow/arrow@2x.png'); */
-  background-image: url('/docs/assets/images/Arrow/arrow@2x.png');
+  /* background-image: url('/docs/assets/images/Arrow/arrow@2x.png'); */
+  background-image: url(../images/Arrow/arrow@2x.png);
   background-position: 127px center;
   background-size: 37px 10px;
   padding-left: 21px;
@@ -328,7 +328,8 @@ https://jsfiddle.net/t5dwp7pg/1/
   width: 30px;
   height: 30px;
   /* UI Properties */
-  background-image:  url('/docs/assets/images/1sideScrollRadio/1.svg'); 
+  /* background-image:  url('/docs/assets/images/1sideScrollRadio/1.svg');  */
+  background-image:  url(../images/1sideScrollRadio/1.svg); 
   opacity: 1;
   /* z-index: 2; */
 }
@@ -340,7 +341,8 @@ https://jsfiddle.net/t5dwp7pg/1/
   width: 8px;
   height: 8px;
   /* UI Properties */
-  background: transparent url('/docs/assets/images/2blackRadio/2.svg') 0% 0% no-repeat padding-box;
+  /* background: transparent url('/docs/assets/images/2blackRadio/2.svg') 0% 0% no-repeat padding-box; */
+  background: transparent url(../images/2blackRadio/2.svg) 0% 0% no-repeat padding-box;
   opacity: 1;
   z-index: 2;
 }
@@ -352,7 +354,8 @@ https://jsfiddle.net/t5dwp7pg/1/
   width: 8px;
   height: 8px;
   /* UI Properties */
-  background: transparent url('/docs/assets/images/2blackRadio/2.svg') 0% 0% no-repeat padding-box;
+  /* background: transparent url('/docs/assets/images/2blackRadio/2.svg') 0% 0% no-repeat padding-box; */
+  background: transparent url(../images/2blackRadio/2.svg) 0% 0% no-repeat padding-box;
   opacity: 1;
   z-index: 2;
 }
@@ -365,7 +368,7 @@ https://jsfiddle.net/t5dwp7pg/1/
   width: 65%;
   height: 490px;
   left: var(--x);
-  border: 1px solid red;
+  /* border: 1px solid red;  */
   
 }
 .l7{
@@ -693,7 +696,8 @@ div.fifth{
 }
 .hover-boxes:hover{
   /* cursor: pointer; */
-  cursor: url("/docs/assets/images/cursor-icon/icons8-cursor.svg"), auto;
+  /* cursor: url("/docs/assets/images/cursor-icon/icons8-cursor.svg"), auto; */
+  cursor: url(../images/cursor-icon/icons8-cursor.svg), auto;
   border: 4px solid white;
   box-shadow: 3px 6px 20px #672C2C1F;
 }
@@ -747,5 +751,42 @@ div.sixth{
     width: 64px;
     height: 45px;
     opacity: 1;
+    z-index: 0;
+    margin-top: 166px;
+    margin-left: -652.5px;
   }
+  div.l15{
+    position: relative;
+    width: 831px;
+    height: 62px;
+    text-align: left;
+    font: normal normal normal 20px/34px Poppins;
+    letter-spacing: 0px;
+    color: #000000;
+    opacity: 1;
+    margin-left: 559px ;
+    margin-top: 76px;
+    z-index: 1;
+  }
+  div.l16{
+    span.name{
+      display: inline-block;
+      text-align: left;
+      font: normal normal bold 20px/34px Poppins;
+      letter-spacing: 0px;
+      color: #FF3147;
+      opacity: 1;
+      margin-left: 559px ;
+      margin-top: 24px;
+    }
+    span.post{
+      display: inline-block;
+      text-align: left;
+      font: normal normal 300 20px/34px Poppins;
+      letter-spacing: 0px;
+      color: #808080;
+      opacity: 1;
+    }
+  }
+
 }
