--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -564,12 +564,12 @@ p.desc-5{
     color: white;
   }
 }
-.fifth{
+div.fifth{
   position: relative;
   top: 2800px;
   left: -1px;
-  /* width: 1920px; */
-  width: 100%;
+  width: 1920px;
+  /* width: 1320px; */
   height: fit-content;
   background: #FAFAFA 0% 0% no-repeat padding-box;
   opacity: 1;
@@ -789,4 +789,29 @@ div.sixth{
     }
   }
 
+}
+
+.footer{
+  position: relative;
+  top: 2900px;
+  width: 1920px;
+  height: 310px;
+  /* background: transparent url('../images/NoPathCopyFooterBgImage/NoPath\ -\ Copy.svg') 0% 0% no-repeat padding-box; */
+  background: transparent url('../images/NoPathCopyFooterBgImage/NoPath\ -\ Copy.svg') -100% -100% no-repeat padding-box;
+  opacity: 1;
+  z-index: 0;
+  div.img{
+    position: absolute;
+    width: 1170px;
+    height: 56px;
+    margin-left: 375px;
+    top: 130px;
+    img{
+      /* position: absolute; */
+      /* z-index: 1; */
+      /* display: inline-block; */
+      width: 100%;
+      height: 56px;
+    } 
+  }
 }
